@@ -49,7 +49,7 @@ extern "C" {
    autoconf (using the AM_PATH_GCRYPT macro) check that this header
    matches the installed library.  Note: Do not edit the next line as
    configure may fix the string here.  */
-#define GCRYPT_VERSION "1.2.1"
+#define GCRYPT_VERSION "1.2.2-cvs"
 
 /* Internal: We can't use the convenience macros for the multi
    precision integer functions when building this library. */
