@@ -54,10 +54,27 @@ struct gcry_sexp
 
 #define TOKEN_SPECIALS  "-./_:*+="
 
+
+
 static gcry_error_t
 sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	    const char *buffer, size_t length, int argflag,
 	    va_list arg_ptr, void **arg_list);
+
+
+/* Return true if P points to a byte containing a whitespace according
+   to the S-expressions definition. */
+#undef whitespacep
+static GPG_ERR_INLINE int
+whitespacep (const unsigned char *p)
+{ 
+  switch (*p)
+    {
+    case ' ': case '\t': case '\v': case '\f': case '\r': case '\n': return 1;
+    default: return 0;
+    }
+}
+
 
 #if 0
 static void
@@ -902,7 +919,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 
   /* FIXME: invent better error codes (?).  */
 
-  if (! erroff)
+  if (!erroff)
     erroff = &dummy_erroff;
 
   /* Depending on wether ARG_LIST is non-zero or not, this macro gives
@@ -911,7 +928,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 #define ARG_NEXT(storage, type)                          \
   do                                                     \
     {                                                    \
-      if (! arg_list)                                    \
+      if (!arg_list)                                    \
 	storage = va_arg (arg_ptr, type);                \
       else                                               \
 	storage = *((type *) (arg_list[arg_counter++])); \
@@ -937,7 +954,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 
   for (p = buffer, n = length; n; p++, n--)
     {
-      if (tokenp && (! hexfmt))
+      if (tokenp && !hexfmt)
 	{
 	  if (strchr (tokenchars, *p))
 	    continue;
@@ -966,9 +983,9 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 
 		case '0': case '1': case '2': case '3': case '4':
 		case '5': case '6': case '7':
-		  if (! ((n > 2)
-			 && (p[1] >= '0') && (p[1] <= '7')
-			 && (p[2] >= '0') && (p[2] <= '7')))
+		  if (!((n > 2)
+                        && (p[1] >= '0') && (p[1] <= '7')
+                        && (p[2] >= '0') && (p[2] <= '7')))
 		    {
 		      *erroff = p - buffer;
 		      /* Invalid octal value.  */
@@ -980,7 +997,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 		  break;
 		  
 		case 'x':
-		  if (! ((n > 2) && isxdigit(p[1]) && isxdigit(p[2])))
+		  if (!((n > 2) && isxdigit(p[1]) && isxdigit(p[2])))
 		    {
 		      *erroff = p - buffer;
 		      /* Invalid hex value.  */
@@ -1055,14 +1072,14 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	      STORE_LEN (c.pos, datalen);
 	      for (hexfmt++; hexfmt < p; hexfmt++)
 		{
-		  if (isspace (*hexfmt))
+		  if (whitespacep (hexfmt))
 		    continue;
 		  *c.pos++ = hextobyte (hexfmt);
 		  hexfmt++;
 		}
 	      hexfmt = NULL;
 	    }
-	  else if (! isspace (*p))
+	  else if (!whitespacep (p))
 	    {
 	      *erroff = p - buffer;
 	      err = GPG_ERR_SEXP_BAD_HEX_CHAR;
@@ -1075,7 +1092,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	}
       else if (digptr)
 	{
-	  if (isdigit (*p))
+	  if (digitp (p))
 	    ;
 	  else if (*p == ':')
 	    {
@@ -1133,7 +1150,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 		BUG ();
 
 	      MAKE_SPACE (nm);
-	      if ((! gcry_is_secure (c.sexp->d))
+	      if ((!gcry_is_secure (c.sexp->d))
 		  &&  gcry_mpi_get_flag ( m, GCRYMPI_FLAG_SECURE))
 		{
 		  /* We have to switch to secure allocation.  */
@@ -1275,7 +1292,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	}
       else if (*p == ']')
 	{
-	  if (! disphint)
+	  if (!disphint)
 	    {
 	      *erroff = p - buffer;
 	      /* Open display hint.  */
@@ -1283,7 +1300,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	    }
 	  disphint = NULL;
 	}
-      else if (isdigit (*p))
+      else if (digitp (p))
 	{
 	  if (*p == '0')
 	    {
@@ -1295,7 +1312,7 @@ sexp_sscan (gcry_sexp_t *retsexp, size_t *erroff,
 	}
       else if (strchr (tokenchars, *p))
 	tokenp = p;
-      else if (isspace (*p))
+      else if (whitespacep (p))
 	;
       else if (*p == '{')
 	{
